--- a/package.json
+++ b/package.json
@@ -1,26 +1,169 @@
 {
   "name": "convertidor_imagenes",
   "version": "1.0.0",
+  "description": "Conversor de imágenes con Electron - Convierte entre diferentes formatos con calidad profesional",
   "main": "dist/main/main.js",
+  "homepage": "https://github.com/jesusrosales17/image-converter",
+  "author": {
+    "name": "Jesus Rosales Castillo",
+    "email": "jesusrosales07537@gmail.com"
+  },
+  "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "dev": "concurrently \"tsc --watch\"  \"nodemon --watch dist --exec electron ./dist/main/main.js\"",
     "watch": "tsc --watch",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist && rm -rf release",
+    "rebuild": "electron-builder install-app-deps",
+    "build:renderer": "cd src/renderer && npm run build",
+    "build:all": "npm run build && npm run build:renderer",
+    "electron:build": "npm run build:all && electron-builder",
+    "electron:build:linux": "npm run rebuild && npm run build:all && electron-builder --linux",
+    "electron:build:win": "npm run rebuild && npm run build:all && electron-builder --win",
+    "electron:build:mac": "npm run rebuild && npm run build:all && electron-builder --mac",
+    "electron:pack": "npm run build:all && electron-builder --dir",
+    "dist": "npm run build:all && electron-builder --publish=never",
+    "dist:linux": "npm run rebuild && npm run build:all && electron-builder --linux --publish=never",
+    "publish": "npm run rebuild && npm run build:all && electron-builder --publish=always",
+    "postinstall": "electron-builder install-app-deps"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@types/node": "^20.0.0",
     "concurrently": "^9.2.0",
     "electron": "^37.2.5",
+    "electron-builder": "^24.13.3",
     "nodemon": "^3.1.10",
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@img/sharp-linux-x64": "^0.34.3",
+    "electron-updater": "^6.6.2",
     "sharp": "^0.34.3",
     "ts-node": "^10.9.2"
+  },
+  "build": {
+    "appId": "com.jesusrosales.convertidor-imagenes",
+    "productName": "Convertidor de Imágenes",
+    "artifactName": "${productName}-${version}-${os}-${arch}.${ext}",
+    "copyright": "Copyright © 2025 Jesus Rosales Castillo",
+    "directories": {
+      "output": "release"
+    },
+    "files": [
+      "dist/**/*",
+      "src/renderer/dist/**/*",
+      "!src/renderer/src/**/*",
+      "!src/renderer/node_modules/**/*",
+      "!**/*.ts",
+      "!**/*.map",
+      "node_modules/**/*",
+      "!node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
+      "!node_modules/*/{test,__tests__,tests,powered-test,example,examples}",
+      "!node_modules/*.d.ts",
+      "!node_modules/.bin",
+      "!**/*.{iml,o,hprof,orig,pyc,pyo,rbc,swp,csproj,sln,xproj}",
+      "!.editorconfig",
+      "!**/._*",
+      "!**/{.DS_Store,.git,.hg,.svn,CVS,RCS,SCCS,.gitignore,.gitattributes}",
+      "!**/{__pycache__,thumbs.db,.flowconfig,.idea,.vs,.nyc_output}",
+      "!**/{appveyor.yml,.travis.yml,circle.yml}",
+      "!**/{npm-debug.log,yarn.lock,.yarn-integrity,.yarn-metadata.json}"
+    ],
+    "asarUnpack": [
+      "node_modules/sharp/**/*",
+      "node_modules/@img/**/*"
+    ],
+    "buildDependenciesFromSource": false,
+    "nodeGypRebuild": false,
+    "npmRebuild": false,
+    "extraResources": [
+      {
+        "from": "assets",
+        "to": "assets",
+        "filter": [
+          "**/*"
+        ]
+      }
+    ],
+    "linux": {
+      "target": [
+        {
+          "target": "AppImage",
+          "arch": [
+            "x64",
+            "arm64"
+          ]
+        },
+        {
+          "target": "tar.gz",
+          "arch": [
+            "x64",
+            "arm64"
+          ]
+        }
+      ],
+      "category": "Graphics",
+      "description": "Conversor de imágenes profesional",
+      "desktop": {
+        "Comment": "Convierte imágenes entre diferentes formatos",
+        "Keywords": "image;converter;graphics;photo;convert;webp;jpeg;png;avif;tiff"
+      },
+      "icon": "assets/icon.png",
+      "executableName": "convertidor_imagenes"
+    },
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        },
+        {
+          "target": "portable",
+          "arch": [
+            "x64"
+          ]
+        }
+      ],
+      "icon": "assets/icon.ico",
+      "requestedExecutionLevel": "asInvoker"
+    },
+    "mac": {
+      "target": [
+        {
+          "target": "dmg",
+          "arch": [
+            "x64",
+            "arm64"
+          ]
+        },
+        {
+          "target": "zip",
+          "arch": [
+            "x64",
+            "arm64"
+          ]
+        }
+      ],
+      "icon": "assets/icon.icns",
+      "category": "public.app-category.graphics-design"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "Convertidor de Imágenes"
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "jesusrosales17",
+      "repo": "image-converter",
+      "private": false,
+      "releaseType": "release"
+    }
   }
 }
